--- a/SortSearchAndPagedSample/SortSearchAndPagedSample/packages.config
+++ b/SortSearchAndPagedSample/SortSearchAndPagedSample/packages.config
@@ -5,6 +5,7 @@
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="EntityFramework.zh-Hant" version="6.1.3" targetFramework="net461" />
   <package id="jQuery" version="2.2.3" targetFramework="net461" />
+  <package id="jquery.TypeScript.DefinitelyTyped" version="3.0.6" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc.zh-Hant" version="5.2.3" targetFramework="net461" />
@@ -22,6 +23,7 @@
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
   <package id="PagedList" version="1.17.0.0" targetFramework="net461" />
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net461" />
+  <package id="purl.TypeScript.DefinitelyTyped" version="0.0.7" targetFramework="net461" />
   <package id="Respond" version="1.2.0" targetFramework="net461" />
   <package id="WebGrease" version="1.5.2" targetFramework="net461" />
 </packages>
